--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
     </head>
     <body>
         <h1>Ayo man, would u like to eat this sht with me</h1>
+        <p>I love kebab</p>
+        <p>thb never tried codeine, but my friend did, he said he's now playboy carter</p>
+        <p>pozdro falka</p>
     </body>
 </html>
