--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <h1>Ayo man, would u like to eat this sht with me</h1>
         <p>I love kebab</p>
         <p>thb never tried codeine, but my friend did, he said he's now playboy carter</p>
-        <p>pozdro falka</p>
+        <p>i hate black monkeys (they eat banana and kfc, they also play basketball</p>
     </body>
 </html>
